Integrate Autobazar.sk scraper and dashboard update

--- a/dashboard.html
+++ b/dashboard.html
@@ -306,6 +306,7 @@
                 <option value="all">Všetky portály</option>
                 <option value="Bazos">Bazos.sk</option>
                 <option value="Autobazar.eu">Autobazar.eu</option>
+                <option value="Autobazar.sk">Autobazar.sk</option>
             </select>
             <button onclick="refreshData()">🔄 Obnoviť</button>
         </div>
