--- a/novy_dashboard.html
+++ b/novy_dashboard.html
@@ -13,7 +13,6 @@
             --bg-body: #0a0c10;
             --bg-card: #161a22;
             --accent: #fdda25;
-            /* Bazos yellow */
             --accent-glow: rgba(253, 218, 37, 0.2);
             --text-main: #e2e8f0;
             --text-muted: #94a3b8;
@@ -46,7 +45,7 @@
 
         /* HEADER */
         header {
-            padding: 2rem 5%;
+            padding: 1.5rem 5%;
             background: linear-gradient(to bottom, rgba(22, 26, 34, 0.8), transparent);
             backdrop-filter: blur(10px);
             position: sticky;
@@ -62,7 +61,6 @@
             font-size: 1.8rem;
             font-weight: 700;
             color: var(--accent);
-            letter-spacing: -1px;
             display: flex;
             align-items: center;
             gap: 10px;
@@ -70,15 +68,15 @@
 
         .stats {
             display: flex;
-            gap: 20px;
+            gap: 15px;
         }
 
         .stat-item {
             background: var(--bg-card);
-            padding: 8px 16px;
-            border-radius: 12px;
+            padding: 6px 14px;
+            border-radius: 10px;
             border: 1px solid var(--border);
-            font-size: 0.9rem;
+            font-size: 0.85rem;
         }
 
         /* FILTERS */
@@ -105,7 +103,7 @@
         }
 
         .filter-group label {
-            font-size: 0.75rem;
+            font-size: 0.7rem;
             text-transform: uppercase;
             font-weight: 700;
             color: var(--text-muted);
@@ -146,7 +144,7 @@
 
         .card {
             background: var(--bg-card);
-            border-radius: 20px;
+            border-radius: 18px;
             overflow: hidden;
             border: 1px solid var(--border);
             transition: transform 0.3s, box-shadow 0.3s;
@@ -168,7 +166,6 @@
 
         .badge {
             font-size: 0.7rem;
-            text-transform: uppercase;
             font-weight: 700;
             padding: 4px 10px;
             border-radius: 20px;
@@ -186,20 +183,10 @@
             color: #fff;
         }
 
-        .badge-fair {
-            background: var(--fair);
-            color: #fff;
-        }
-
-        .badge-over {
-            background: var(--over);
-            color: #fff;
-        }
-
         .title {
             font-size: 1.1rem;
             font-weight: 600;
-            margin-bottom: 5px;
+            margin-bottom: 8px;
             display: -webkit-box;
             line-clamp: 2;
             -webkit-line-clamp: 2;
@@ -215,7 +202,7 @@
             gap: 10px;
             font-size: 0.85rem;
             color: var(--text-muted);
-            margin-bottom: 15px;
+            margin-bottom: 12px;
         }
 
         .price-row {
@@ -227,14 +214,14 @@
         }
 
         .price {
-            font-size: 1.5rem;
+            font-size: 1.4rem;
             font-weight: 700;
             color: var(--accent);
         }
 
         .median {
             text-align: right;
-            font-size: 0.8rem;
+            font-size: 0.75rem;
             color: var(--text-muted);
         }
 
@@ -242,7 +229,7 @@
             display: block;
             font-size: 0.9rem;
             color: var(--text-main);
-            opacity: 0.9;
+            font-weight: 600;
         }
 
         .features {
@@ -250,14 +237,14 @@
             display: flex;
             flex-wrap: wrap;
             gap: 5px;
-            min-height: 60px;
+            min-height: 55px;
         }
 
         .feature-tag {
-            background: rgba(255, 255, 255, 0.05);
+            background: rgba(255, 255, 255, 0.04);
             padding: 3px 8px;
             border-radius: 6px;
-            font-size: 0.75rem;
+            font-size: 0.7rem;
             border: 1px solid var(--border);
         }
 
@@ -270,25 +257,14 @@
             align-items: center;
         }
 
-        .portal-name {
-            font-size: 0.8rem;
-            font-weight: 600;
-            color: var(--text-muted);
-        }
-
         .btn {
             background: var(--accent);
             color: #000;
             text-decoration: none;
             padding: 8px 16px;
             border-radius: 8px;
-            font-size: 0.85rem;
-            font-weight: 600;
-            transition: transform 0.2s;
-        }
-
-        .btn:hover {
-            transform: scale(1.05);
+            font-size: 0.8rem;
+            font-weight: 700;
         }
 
         .discount-label {
@@ -302,16 +278,8 @@
             border-bottom-left-radius: 10px;
             font-weight: 700;
             font-size: 0.9rem;
-            box-shadow: -2px 2px 10px rgba(0, 0, 0, 0.3);
         }
 
-        .other-portals {
-            padding: 5px 20px 15px;
-            font-size: 0.75rem;
-            color: var(--text-muted);
-        }
-
-        /* LOADING */
         #loader {
             position: fixed;
             inset: 0;
@@ -323,10 +291,10 @@
         }
 
         .spinner {
-            width: 50px;
-            height: 50px;
-            border: 5px solid rgba(253, 218, 37, 0.1);
-            border-top: 5px solid var(--accent);
+            width: 40px;
+            height: 40px;
+            border: 4px solid rgba(253, 218, 37, 0.1);
+            border-top: 4px solid var(--accent);
             border-radius: 50%;
             animation: spin 1s linear infinite;
         }
@@ -337,60 +305,37 @@
             }
         }
 
-        /* SCROLLBAR */
-        ::-webkit-scrollbar {
-            width: 8px;
-        }
-
-        ::-webkit-scrollbar-track {
-            background: var(--bg-body);
-        }
-
-        ::-webkit-scrollbar-thumb {
-            background: #333;
-            border-radius: 10px;
-        }
-
-        ::-webkit-scrollbar-thumb:hover {
-            background: #444;
-        }
-
         @media (max-width: 600px) {
             header {
                 flex-direction: column;
                 gap: 15px;
-                text-align: center;
             }
 
-            .filters-container {
+            .filter-row {
                 flex-direction: column;
+                align-items: stretch;
             }
         }
     </style>
 </head>
 
 <body>
-
     <div id="loader">
         <div class="spinner"></div>
     </div>
 
     <header>
-        <div class="logo">
-            <span>✨</span> Golden Deal Finder Slovakia
-        </div>
-        <div class="stats" id="stats-summary">
-            <!-- Stats will be injected here -->
-        </div>
+        <div class="logo"><span>✨</span> Golden Deal Finder Slovakia</div>
+        <div class="stats" id="stats-summary"></div>
     </header>
 
     <div class="filters-container">
-        <div class="filter-row main-search">
+        <div class="filter-row">
             <input type="text" id="search" class="search-box"
                 placeholder="Hľadať v inzerátoch (model, motor, lokalita... )">
         </div>
 
-        <div class="filter-row second-row">
+        <div class="filter-row">
             <div class="filter-group">
                 <label>Značka</label>
                 <select id="filter-make">
@@ -401,26 +346,17 @@
             <div class="filter-group">
                 <label>Rok od-do</label>
                 <div style="display:flex; gap:5px;">
-                    <input type="number" id="year-min" placeholder="Od" style="width:80px; padding:6px 10px;">
-                    <input type="number" id="year-max" placeholder="Do" style="width:80px; padding:6px 10px;">
+                    <input type="number" id="year-min" placeholder="Od" style="width:75px;">
+                    <input type="number" id="year-max" placeholder="Do" style="width:75px;">
                 </div>
             </div>
 
             <div class="filter-group">
                 <label>Cena od-do</label>
                 <div style="display:flex; gap:5px;">
-                    <input type="number" id="price-min" placeholder="Min €" style="width:90px; padding:6px 10px;">
-                    <input type="number" id="price-max" placeholder="Max €" style="width:90px; padding:6px 10px;">
+                    <input type="number" id="price-min" placeholder="Min €" style="width:90px;">
+                    <input type="number" id="price-max" placeholder="Max €" style="width:90px;">
                 </div>
-            </div>
-
-            <div class="filter-group">
-                <label>Prevodovka</label>
-                <select id="filter-transmission">
-                    <option value="all">Hocičo</option>
-                    <option value="Automat">Automat</option>
-                    <option value="Manuál">Manuál</option>
-                </select>
             </div>
 
             <div class="filter-group">
@@ -435,21 +371,21 @@
             </div>
 
             <div class="filter-group">
+                <label>Prevodovka</label>
+                <select id="filter-transmission">
+                    <option value="all">Hocičo</option>
+                    <option value="Automat">Automat</option>
+                    <option value="Manuál">Manuál</option>
+                </select>
+            </div>
+
+            <div class="filter-group">
                 <label>Pohon</label>
                 <select id="filter-drive">
                     <option value="all">Hocičo</option>
                     <option value="4x4">4x4 / AWD</option>
                     <option value="Predný">Predný</option>
                     <option value="Zadný">Zadný</option>
-                </select>
-            </div>
-
-            <div class="filter-group">
-                <label>Deal Type</label>
-                <select id="filter-deal">
-                    <option value="all">Všetky ponuky</option>
-                    <option value="GOLDEN DEAL">🌟 Golden Deals</option>
-                    <option value="GOOD DEAL">✅ Good Deals</option>
                 </select>
             </div>
 
@@ -465,15 +401,11 @@
         </div>
     </div>
 
-    <main id="listings-grid">
-        <!-- Listings will be injected here -->
-    </main>
+    <main id="listings-grid"></main>
 
     <script src="scored_listings_data.js"></script>
     <script>
         let allListings = [];
-
-        // UI Helpers
         const $ = id => document.getElementById(id);
 
         async function init() {
@@ -488,10 +420,9 @@
                 populateMakeFilter();
                 updateStats();
                 renderListings();
-
-                document.getElementById('loader').style.display = 'none';
+                $('loader').style.display = 'none';
             } catch (error) {
-                console.error('Error:', error);
+                console.error(error);
                 $('listings-grid').innerHTML = '<h2>Chyba pri načítavaní dát.</h2>';
             }
         }
@@ -513,7 +444,6 @@
                 golden: allListings.filter(l => l.dealType === 'GOLDEN DEAL').length,
                 good: allListings.filter(l => l.dealType === 'GOOD DEAL').length
             };
-
             $('stats-summary').innerHTML = `
                 <div class="stat-item"><b>${stats.total}</b> inzerátov</div>
                 <div class="stat-item" style="color:var(--golden)"><b>${stats.golden}</b> Golden</div>
@@ -525,35 +455,25 @@
             const grid = $('listings-grid');
             const search = $('search').value.toLowerCase();
             const make = $('filter-make').value;
-            const deal = $('filter-deal').value;
-            const trans = $('filter-transmission').value;
             const fuel = $('filter-fuel').value;
+            const trans = $('filter-transmission').value;
             const drive = $('filter-drive').value;
             const sort = $('sort-by').value;
-
             const minYear = parseInt($('year-min').value) || 0;
             const maxYear = parseInt($('year-max').value) || 9999;
             const minPrice = parseInt($('price-min').value) || 0;
             const maxPrice = parseInt($('price-max').value) || 999999;
 
             let filtered = allListings.filter(l => {
-                const matchesSearch = !search ||
-                    l.title.toLowerCase().includes(search) ||
-                    (l.engine && l.engine.toLowerCase().includes(search)) ||
-                    (l.location && l.location.toLowerCase().includes(search));
-
+                const matchesSearch = !search || l.title.toLowerCase().includes(search);
                 const matchesMake = make === 'all' || l.make === make;
-                const matchesDeal = deal === 'all' || l.dealType === deal;
-
                 const matchesFuel = fuel === 'all' || (l.fuel || '').includes(fuel);
 
-                // Transmission normalization
                 const lTrans = (l.transmission || '').toLowerCase();
                 const matchesTrans = trans === 'all' ||
                     (trans === 'Automat' && lTrans.includes('auto')) ||
                     (trans === 'Manuál' && lTrans.includes('man'));
 
-                // Drive normalization
                 const lDrive = (l.drive || '').toLowerCase();
                 const isAwd = lDrive.includes('4x4') || lDrive.includes('awd') || lDrive.includes('quattro') || (l.features && l.features.includes('4x4'));
                 const matchesDrive = drive === 'all' ||
@@ -564,10 +484,9 @@
                 const matchesYear = l.year >= minYear && l.year <= maxYear;
                 const matchesPrice = l.price >= minPrice && l.price <= maxPrice;
 
-                return matchesSearch && matchesMake && matchesDeal && matchesTrans && matchesFuel && matchesDrive && matchesYear && matchesPrice && !l.isFiltered;
+                return matchesSearch && matchesMake && matchesFuel && matchesTrans && matchesDrive && matchesYear && matchesPrice && !l.isFiltered;
             });
 
-            // Sorting
             if (sort === 'discount') filtered.sort((a, b) => b.discount - a.discount);
             else if (sort === 'price-asc') filtered.sort((a, b) => a.price - b.price);
             else if (sort === 'year-desc') filtered.sort((a, b) => b.year - a.year);
@@ -579,7 +498,6 @@
         function createCard(l) {
             const badgeClass = l.dealType.toLowerCase().split(' ')[0];
             const isAwd = (l.drive || '').toLowerCase().includes('4x4') || (l.features && l.features.includes('4x4'));
-
             let featuresHtml = (l.features || []).map(f => `<span class="feature-tag">${f}</span>`).join('');
             if (!featuresHtml) featuresHtml = '<span class="feature-tag" style="opacity:0.3">Základná výbava</span>';
 
@@ -590,43 +508,27 @@
                         <span class="badge badge-${badgeClass}">${l.dealType}</span>
                         <h3 class="title">${l.title}</h3>
                         <div class="meta">
-                            <span>📅 ${l.year || 'N/A'}</span>
-                            <span>🛣️ ${l.km ? l.km.toLocaleString() + ' km' : 'N/A'}</span>
-                            <span>📍 ${l.location || 'N/A'}</span>
+                            <span>📅 ${l.year}</span> <span>🛣️ ${l.km ? l.km.toLocaleString() : '?'} km</span> <span>📍 ${l.location || '?'}</span>
                         </div>
-                        <div class="meta" style="margin-top:-10px; font-weight:600; color:var(--text-main)">
-                            <span>⛽ ${l.fuel || 'N/A'}</span>
-                            <span>⚙️ ${l.transmission || 'N/A'}</span>
+                        <div class="meta" style="margin-top:-8px; font-weight:600; color:var(--text-main)">
+                            <span>⛽ ${l.fuel || '?'}</span> <span>⚙️ ${l.transmission || '?'}</span>
                             ${isAwd ? '<span style="color:var(--accent)">☸️ 4x4</span>' : ''}
                         </div>
                     </div>
-
-                    <div class="features">
-                        ${featuresHtml}
-                    </div>
-
+                    <div class="features">${featuresHtml}</div>
                     <div class="price-row">
                         <div class="price">${l.price.toLocaleString()} €</div>
-                        <div class="median">
-                            Trhová hodnota
-                            <span>${l.correctedMedian.toLocaleString()} €</span>
-                        </div>
+                        <div class="median">Trhová hodnota <span>${l.correctedMedian.toLocaleString()} €</span></div>
                     </div>
-
                     <div class="card-footer">
                         <div class="portal-name">${l.portal}</div>
-                        <a href="${l.url}" target="_blank" class="btn">Detail inzerátu</a>
+                        <a href="${l.url}" target="_blank" class="btn">Pozrieť</a>
                     </div>
                 </div>
             `;
         }
 
-        // Listeners for all filter inputs
-        document.querySelectorAll('.filters-container input, .filters-container select').forEach(el => {
-            el.addEventListener('input', renderListings);
-            el.addEventListener('change', renderListings);
-        });
-
+        document.querySelectorAll('input, select').forEach(el => el.oninput = renderListings);
         init();
     </script>
 </body>
