--- a/novy_dashboard.html
+++ b/novy_dashboard.html
@@ -410,12 +410,19 @@
 
         async function init() {
             try {
-                if (window.scoredListingsData) {
+                const isGitHub = window.location.hostname.includes('github.io');
+
+                if (isGitHub) {
+                    const response = await fetch('scored_listings.json?t=' + Date.now());
+                    allListings = await response.json();
+                } else if (window.scoredListingsData) {
                     allListings = window.scoredListingsData;
                 } else {
                     const response = await fetch('scored_listings.json');
                     allListings = await response.json();
                 }
+
+                if (!allListings || allListings.length === 0) throw new Error('Data empty');
 
                 populateMakeFilter();
                 updateStats();
