--- a/dashboard.html
+++ b/dashboard.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Golden Deal Finder Slovakia</title>
+    <title>AutoRadar</title>
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&family=Outfit:wght@400;600;700&display=swap"
         rel="stylesheet">
@@ -377,7 +377,7 @@
 
     <header>
         <div class="logo">
-            <span>✨</span> Golden Deal Finder Slovakia
+            <span>📡</span> AutoRadar
         </div>
         <div class="stats" id="stats-summary">
             <!-- Stats will be injected here -->
