--- a/novy_dashboard.html
+++ b/novy_dashboard.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Golden Deal Finder Slovakia</title>
+    <title>AutoRadar</title>
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&family=Outfit:wght@400;600;700&display=swap"
         rel="stylesheet">
@@ -325,7 +325,7 @@
     </div>
 
     <header>
-        <div class="logo"><span>✨</span> Golden Deal Finder Slovakia</div>
+        <div class="logo"><span>📡</span> AutoRadar</div>
         <div class="stats" id="stats-summary"></div>
     </header>
 
