Show mileage segment on UI and update data

--- a/dashboard.html
+++ b/dashboard.html
@@ -791,6 +791,7 @@
                             <span>⛽ ${l.fuel || 'N/A'}</span>
                             <span>⚙️ ${l.transmission || 'N/A'}</span>
                             ${isAwd ? '<span style="color:var(--accent)">☸️ 4x4</span>' : ''}
+                            <span style="font-size: 0.75rem; color: var(--text-muted); text-transform: uppercase;">| Segment: ${l.kmSegment || 'N/A'}</span>
                         </div>
                     </div>
 
