--- a/novy_dashboard.html
+++ b/novy_dashboard.html
@@ -706,6 +706,7 @@
                         <div class="meta" style="margin-top:-8px; font-weight:600; color:var(--text-main)">
                             <span>⛽ ${l.fuel || '?'}</span> <span>⚙️ ${l.transmission || '?'}</span>
                             ${isAwd ? '<span style="color:var(--accent)">☸️ 4x4</span>' : ''}
+                            <span style="font-size: 0.75rem; color: var(--text-muted); text-transform: uppercase;">| Segment: ${l.kmSegment || 'N/A'}</span>
                         </div>
                     </div>
                     <div class="features">${featuresHtml}</div>
