--- a/dashboard.html
+++ b/dashboard.html
@@ -793,6 +793,7 @@
                             ${isAwd ? '<span style="color:var(--accent)">☸️ 4x4</span>' : ''}
                         </div>
                         ${l.dealReason ? `<div class="deal-reason" style="font-size: 0.8rem; color: var(--accent); margin-top: 8px; font-weight: 600;">💡 ${l.dealReason}</div>` : ''}
+                        ${l.mileageWarning ? `<div class="mileage-warning" style="font-size: 0.8rem; color: #ff4d4d; margin-top: 5px; font-weight: 700;">${l.mileageWarning}</div>` : ''}
                     </div>
 
                     <div class="features">
