--- a/novy_dashboard.html
+++ b/novy_dashboard.html
@@ -708,6 +708,7 @@
                             ${isAwd ? '<span style="color:var(--accent)">☸️ 4x4</span>' : ''}
                         </div>
                         ${l.dealReason ? `<div class="deal-reason" style="font-size: 0.75rem; color: var(--accent); margin-top: 5px; font-weight: 600;">💡 ${l.dealReason}</div>` : ''}
+                        ${l.mileageWarning ? `<div class="mileage-warning" style="font-size: 0.75rem; color: #ff4d4d; margin-top: 3px; font-weight: 700;">${l.mileageWarning}</div>` : ''}
                     </div>
                     <div class="features">${featuresHtml}</div>
                     <div class="price-row">
