Implement Liquidity Score Engine and update dashboard UI

--- a/dashboard.html
+++ b/dashboard.html
@@ -847,6 +847,24 @@
                         </div>
                     </div>
 
+                    ${l.liquidity ? `
+                    <div class="liquidity-box" style="padding: 15px 20px; border-top: 1px solid rgba(255,255,255,0.05); background: rgba(0,0,0,0.15)">
+                        <div style="display: flex; justify-content: space-between; align-items: center;">
+                            <span style="font-size: 0.7rem; color: var(--text-muted); text-transform: uppercase; font-weight: 700; letter-spacing: 0.5px;">Likvidita (Predaj)</span>
+                            <span style="font-size: 0.75rem; font-weight: 700; color: ${l.liquidity.color}">${l.liquidity.label}</span>
+                        </div>
+                        <div style="margin-top: 6px; display: flex; align-items: center; gap: 8px;">
+                            <div style="flex-grow: 1; height: 5px; background: rgba(255,255,255,0.05); border-radius: 3px; overflow: hidden;">
+                                <div style="width: ${l.liquidity.score}%; height: 100%; background: ${l.liquidity.color}; transition: width 1s ease-out; box-shadow: 0 0 10px ${l.liquidity.color}44;"></div>
+                            </div>
+                            <span style="font-size: 0.7rem; color: var(--text-muted); min-width: 25px; text-align: right;">${l.liquidity.score}%</span>
+                        </div>
+                        <div style="font-size: 0.65rem; color: var(--text-muted); margin-top: 4px; opacity: 0.8;">
+                             ⏱️ Odhadovaný čas predaja: <b>${l.liquidity.estimate}</b>
+                        </div>
+                    </div>
+                    ` : ''}
+
                     <div class="card-footer">
                         <div class="portal-name">${l.portal}</div>
                         <a href="${l.url}" target="_blank" class="btn">Detail inzerátu</a>
