--- a/dashboard.html
+++ b/dashboard.html
@@ -190,6 +190,31 @@
             color: #888;
         }
 
+        .card-sold {
+            filter: grayscale(1);
+            opacity: 0.6;
+            pointer-events: none;
+            /* De-emphasize further */
+        }
+
+        .sold-label {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%) rotate(-15deg);
+            background: #ff4d4d;
+            color: white;
+            padding: 10px 20px;
+            font-weight: 900;
+            font-size: 1.2rem;
+            border: 4px solid white;
+            border-radius: 10px;
+            z-index: 10;
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+            white-space: nowrap;
+            text-transform: uppercase;
+        }
+
         .card-header {
             padding: 20px;
             padding-bottom: 10px;
@@ -818,7 +843,8 @@
 
             // Visual warning classes
             let extraClass = '';
-            if (l.mileageWarning) {
+            if (l.isSold) extraClass = 'card-sold';
+            else if (l.mileageWarning) {
                 if (l.mileageWarning.includes('💀')) extraClass = 'card-zombie';
                 else extraClass = 'card-warning';
             }
@@ -831,7 +857,7 @@
 
             return `
                 <div class="card ${extraClass}">
-                    ${l.discount >= 10 ? `<div class="discount-label">-${l.discount}%</div>` : ''}
+                    ${l.isSold ? `<div class="sold-label">🚀 PREDANÉ RÝCHLO</div>` : (l.discount >= 10 ? `<div class="discount-label">-${l.discount}%</div>` : '')}
                     <div class="card-header">
                         <span class="badge badge-${badgeClass}">${l.dealType}</span>
                         <h3 class="title">${l.title}</h3>
@@ -847,6 +873,7 @@
                         </div>
                         ${l.dealReason ? `<div class="deal-reason" style="font-size: 0.8rem; color: var(--accent); margin-top: 8px; font-weight: 600;">💡 ${l.dealReason}</div>` : ''}
                         ${l.mileageWarning ? `<div class="mileage-warning" style="font-size: 0.8rem; color: #ff4d4d; margin-top: 5px; font-weight: 700;">${l.mileageWarning}</div>` : ''}
+                        ${l.isSold && l.soldTimeStr ? `<div style="font-size: 0.8rem; color: #00ff88; margin-top: 5px; font-weight: 700;">⏱️ Zmizlo z trhu za ${l.soldTimeStr}</div>` : ''}
                     </div>
 
                     <div class="features">
