--- a/novy_dashboard.html
+++ b/novy_dashboard.html
@@ -188,6 +188,30 @@
             color: #888;
         }
 
+        .card-sold {
+            filter: grayscale(1);
+            opacity: 0.6;
+            pointer-events: none;
+        }
+
+        .sold-label {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%) rotate(-15deg);
+            background: #ff4d4d;
+            color: white;
+            padding: 8px 16px;
+            font-weight: 900;
+            font-size: 1rem;
+            border: 3px solid white;
+            border-radius: 8px;
+            z-index: 10;
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+            white-space: nowrap;
+            text-transform: uppercase;
+        }
+
         .card-header {
             padding: 20px;
             padding-bottom: 10px;
@@ -742,7 +766,8 @@
 
             // Visual warning classes
             let extraClass = '';
-            if (l.mileageWarning) {
+            if (l.isSold) extraClass = 'card-sold';
+            else if (l.mileageWarning) {
                 if (l.mileageWarning.includes('💀')) extraClass = 'card-zombie';
                 else extraClass = 'card-warning';
             }
@@ -755,7 +780,7 @@
 
             return `
                 <div class="card ${extraClass}">
-                    ${l.discount >= 10 ? `<div class="discount-label">-${l.discount}%</div>` : ''}
+                    ${l.isSold ? `<div class="sold-label">🚀 PREDANÉ RÝCHLO</div>` : (l.discount >= 10 ? `<div class="discount-label">-${l.discount}%</div>` : '')}
                     <div class="card-header">
                         <span class="badge badge-${badgeClass}">${l.dealType || 'FAIR PRICE'}</span>
                         <h3 class="title">${l.title}</h3>
@@ -768,6 +793,7 @@
                         </div>
                         ${l.dealReason ? `<div class="deal-reason" style="font-size: 0.75rem; color: var(--accent); margin-top: 5px; font-weight: 600;">💡 ${l.dealReason}</div>` : ''}
                         ${l.mileageWarning ? `<div class="mileage-warning" style="font-size: 0.75rem; color: #ff4d4d; margin-top: 3px; font-weight: 700;">${l.mileageWarning}</div>` : ''}
+                        ${l.isSold && l.soldTimeStr ? `<div style="font-size: 0.75rem; color: #00ff88; margin-top: 4px; font-weight: 700;">⏱️ Zmizlo z trhu za ${l.soldTimeStr}</div>` : ''}
                     </div>
                     <div class="features">${featuresHtml}</div>
                     <div class="price-row">
