--- a/dashboard.html
+++ b/dashboard.html
@@ -874,6 +874,16 @@
                         ${l.dealReason ? `<div class="deal-reason" style="font-size: 0.8rem; color: var(--accent); margin-top: 8px; font-weight: 600;">💡 ${l.dealReason}</div>` : ''}
                         ${l.mileageWarning ? `<div class="mileage-warning" style="font-size: 0.8rem; color: #ff4d4d; margin-top: 5px; font-weight: 700;">${l.mileageWarning}</div>` : ''}
                         ${l.isSold && l.soldTimeStr ? `<div style="font-size: 0.8rem; color: #00ff88; margin-top: 5px; font-weight: 700;">⏱️ Zmizlo z trhu za ${l.soldTimeStr}</div>` : ''}
+                        
+                        ${l.seller ? `
+                        <div style="display: flex; align-items: center; gap: 8px; margin-top: 10px; padding: 6px 10px; background: rgba(255,255,255,0.03); border-radius: 8px; border: 1px solid rgba(255,255,255,0.05);">
+                            <span style="font-size: 1.1rem;">${l.seller.icon}</span>
+                            <div>
+                                <div style="font-size: 0.75rem; font-weight: 700; color: ${l.seller.color}">${l.seller.type}</div>
+                                <div style="font-size: 0.65rem; color: var(--text-muted);">Aktívnych inzerátov: ${l.seller.listingsCount}</div>
+                            </div>
+                        </div>
+                        ` : ''}
                     </div>
 
                     <div class="features">
@@ -902,6 +912,16 @@
                         </div>
                         <div style="font-size: 0.65rem; color: var(--text-muted); margin-top: 4px; opacity: 0.8;">
                              ⏱️ Odhadovaný čas predaja: <b>${l.liquidity.estimate}</b>
+                        </div>
+                        
+                        <div style="margin-top: 12px; padding-top: 10px; border-top: 1px dashed rgba(255,255,255,0.1);">
+                            <div style="display: flex; justify-content: space-between; align-items: center;">
+                                <span style="font-size: 0.7rem; color: var(--text-muted); text-transform: uppercase; font-weight: 700;">Potenciál zjednávania</span>
+                                <span style="font-size: 0.75rem; font-weight: 700; color: ${l.negotiationScore >= 70 ? '#00ff88' : (l.negotiationScore >= 40 ? '#fdda25' : '#ff4d4d')}">${l.negotiationScore}%</span>
+                            </div>
+                            <div style="margin-top: 4px; height: 4px; background: rgba(255,255,255,0.05); border-radius: 2px; overflow: hidden;">
+                                <div style="width: ${l.negotiationScore}%; height: 100%; background: ${l.negotiationScore >= 70 ? '#00ff88' : (l.negotiationScore >= 40 ? '#fdda25' : '#ff4d4d')};"></div>
+                            </div>
                         </div>
                     </div>
                     ` : ''}
